--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My first coursework at GA - how quickly can you solve the maze?",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ."
   },
   "repository": {
     "type": "git",
